--- a/custom.css
+++ b/custom.css
@@ -16,8 +16,8 @@ h1{
 .title, h1{
     padding-top: 150px;
    font-size: 80px;
-   background-color: #152A30;
-   padding-bottom: 150px;
+    padding-bottom: 150px;
+    background-color: #152A30;
 }
  
 .container, .pager {
@@ -39,10 +39,26 @@ h3 {
    
 }
 .panel-body, .panel-heading {
-    background: linear-gradient(lightpink, white);
+      opacity: 0.5;
+    filter: alpha(opacity=50);
+    background:  url('img/balloon-3.jpg');
+    background: linear-gradient(rgba(15, 63, 173, 0.2), rgba(0, 127, 218, 1));
+    background-repeat: no-repeat;
+     background-size: cover;
+     font-family: sans-serif;
+     color: red;
+     font-size: 52px;
+   
+    
+   
 }
+#colored {
+      text-shadow: 2px 2px red;
+      font-size: 100px;
+}
+
  #gallery {
-    background: linear-gradient( rgba(15, 63, 173, 0.3), rgba(0, 127, 218, 1)), url('../img/balloon-1.jpg') center no-repeat fixed;
+    background: linear-gradient( rgba(15, 63, 173, 0.2), rgba(0, 127, 218, 1)), url('img/balloon-1.jpg') center no-repeat fixed;
     background-size: cover;
 }
 h2 {
@@ -51,6 +67,7 @@ h2 {
      padding-bottom: 90px;
      text-align: center;
      font-family: impact;
+       
 }
 
 h4 {
@@ -90,6 +107,7 @@ p {
       color: rgba(0, 0, 200, 10);
       background: src("img/ballonon-1.jpg") no-repeat;
       font-family: 'Righteous', cursive;
+      text-shadow: 2px 2px red;
     }
 
     #progress{
